--- a/text.html
+++ b/text.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-<script src="week.js"></script>
+ <script src="java.js"></script>  
 </body>
 </html>
+
+
